src/objects/Participating_Dealer__c.object
<CustomObject>
    <description>Campaign: Dealers that participate the campaign</description>
    <fields>
        <fullName>Approve_the_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if the list maintanence is completed for the dealers</description>
        <label>Approve the List?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Text(Campaign__r.Brand__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Description__c</fullName>
        <formula>Campaign__r.Campaign_Partner__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_End_Date__c</fullName>
        <formula>Campaign__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Execution_Date__c</fullName>
        <formula>Text(Campaign__r.Execution_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Execution Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Execution_Type__c</fullName>
        <formula>Text(Campaign__r.Execution_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Execution Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Executor__c</fullName>
        <formula>Text(Campaign__r.Campaign_Executer__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Executor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <formula>Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Package</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>The campaign package does not belong to the participanting dealer&apos;s campaign.</errorMessage>
            <filterItems>
                <field>Campaign_Package__c.Campaign__c</field>
                <operation>equals</operation>
                <valueField>$Source.Campaign__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign_Package__c</referenceTo>
        <relationshipLabel>Participating Dealers</relationshipLabel>
        <relationshipName>Participating_Dealers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Start_Date__c</fullName>
        <formula>Campaign__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Sub_Type__c</fullName>
        <formula>Text(Campaign__r.Campaign_Sub_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <formula>Text(Campaign__r.Campaign_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordType.Name</field>
                <operation>equals</operation>
                <value>Campaign Execution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Participating Dealers</relationshipLabel>
        <relationshipName>Participating_Dealers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <formula>IF(INCLUDES( Campaign__r.Class__c , &quot;A-Class&quot;), &quot;A-Class&quot;, NULL) + BR() + 
IF(INCLUDES( Campaign__r.Class__c , &quot;B-Class&quot;), &quot;B-Class&quot;, NULL) + BR() + 
IF(INCLUDES( Campaign__r.Class__c , &quot;C-Class&quot;), &quot;C-Class&quot;, NULL) + BR() + 
IF(INCLUDES( Campaign__r.Class__c , &quot;CL-Class&quot;), &quot;CL-Class&quot;, NULL) + BR() +
IF(INCLUDES( Campaign__r.Class__c , &quot;CLK-Class&quot;), &quot;CLK-Class&quot;, NULL) + BR() + 
IF(INCLUDES( Campaign__r.Class__c , &quot;CLS-Class&quot;), &quot;CLS-Class&quot;, NULL) + BR() + 
IF(INCLUDES( Campaign__r.Class__c , &quot;E-Class&quot;), &quot;E-Class&quot;, NULL) + BR() + 
IF(INCLUDES( Campaign__r.Class__c , &quot;G-Class&quot;), &quot;G-Class&quot;, NULL) + BR() +
IF(INCLUDES( Campaign__r.Class__c , &quot;GL-Class&quot;), &quot;GL-Class&quot;, NULL) + BR() + 
IF(INCLUDES( Campaign__r.Class__c , &quot;GLK-Class&quot;), &quot;GLK-Class&quot;, NULL) + BR() + 
IF(INCLUDES( Campaign__r.Class__c , &quot;ML-Class&quot;), &quot;ML-Class&quot;, NULL) + BR() + 
IF(INCLUDES( Campaign__r.Class__c , &quot;R-Class&quot;), &quot;R-Class&quot;, NULL) + BR() +
IF(INCLUDES( Campaign__r.Class__c , &quot;S-Class&quot;), &quot;S-Class&quot;, NULL) + BR() + 
IF(INCLUDES( Campaign__r.Class__c , &quot;SL-Class&quot;), &quot;SL-Class&quot;, NULL) + BR() + 
IF(INCLUDES( Campaign__r.Class__c , &quot;SLK-Class&quot;), &quot;SLK-Class&quot;, NULL) + BR() + 
IF(INCLUDES( Campaign__r.Class__c , &quot;smart&quot;), &quot;smart&quot;, NULL) + BR() +
IF(INCLUDES( Campaign__r.Class__c , &quot;AMG&quot;), &quot;AMG&quot;, NULL) + BR() + 
IF(INCLUDES( Campaign__r.Class__c , &quot;Other&quot;), &quot;Other&quot;, NULL) + BR() + 
IF(INCLUDES( Campaign__r.Class__c , &quot;CLA-Class&quot;), &quot;CLA-Class&quot;, NULL) + BR() + 
IF(INCLUDES( Campaign__r.Class__c , &quot;GLA-Class&quot;), &quot;GLA-Class&quot;, NULL) + BR() +
IF(INCLUDES( Campaign__r.Class__c , &quot;GLA 45 AMG&quot;), &quot;GLA 45 AMG&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Retailer_ID__c</fullName>
        <formula>Dealer__r.DMS_Retailer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMS Retailer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <formula>text(Dealer__r.Dealer_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Participating Campaigns</relationshipLabel>
        <relationshipName>Participating_Dealers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;,IF(ISPICKVAL($User.Market__c, &apos;KR&apos;), &apos;KR&apos;,&apos;NA&apos;))))</defaultValue>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ND_Code__c</fullName>
        <formula>Dealer__r.Dealer_ND_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ND Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <formula>IF(INCLUDES( Campaign__r.Range__c , &quot;None&quot;), &quot;None&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retail Campaign</label>
        <referenceTo>Retail_Campaign__c</referenceTo>
        <relationshipLabel>Participating Dealers</relationshipLabel>
        <relationshipName>Participating_Dealers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session_End_Date__c</fullName>
        <label>Session End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Session_Start_Date__c</fullName>
        <label>Session Start Date</label>
        <type>Date</type>
    </fields>
    <label>Participating Dealer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Dealer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Register_Dealer_for_Campaign_X</fullName>
        <columns>Campaign__c</columns>
        <columns>Dealer__c</columns>
        <columns>Campaign_Package__c</columns>
        <columns>Session_End_Date__c</columns>
        <columns>Session_Start_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign__c</field>
            <operation>equals</operation>
            <value>National Campaign 1</value>
        </filters>
        <label>*Register Dealer for Campaign X</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>Ref No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List Maintenance</pluralLabel>
    <recordTypes>
        <fullName>Participating_Dealer</fullName>
        <active>false</active>
        <label>Participating Dealer</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Participating_Dealer_Share__c</fullName>
        <label>Participating Dealer Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>Campaign_Package_cannot_be_empty</fullName>
        <active>true</active>
        <description>To prevent adding Campaign Package without any Package Items</description>
        <errorConditionFormula>Campaign_Package__r.Package_Items__c =0</errorConditionFormula>
        <errorDisplayField>Campaign_Package__c</errorDisplayField>
        <errorMessage>You can&apos;t add a Campaign Package without any Package Items.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>List_Maintenance_lock</fullName>
        <active>true</active>
        <errorConditionFormula>AND(($Profile.Name != &apos;IntegrationAPI&apos;),( MD__c = &apos;JP&apos;),Campaign__r.Consolidated_List_Completed__c = TRUE)</errorConditionFormula>
        <errorMessage>List Maintenance is Completed,You Cant Edit And Create</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Session_Start_Date_is_less_than_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Session_Start_Date__c  &gt;  Session_End_Date__c</errorConditionFormula>
        <errorMessage>Session Start Date must be less than or equal to Session End Date</errorMessage>
    </validationRules>
</CustomObject>